--- a/package.json
+++ b/package.json
@@ -22,16 +22,24 @@
   "author": "Nour Alhadi Mahmoud",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "http-status-codes": "^2.1.4"
+    "express-validator": "^6.10.0",
+    "http-status-codes": "^2.1.4",
+    "jsonwebtoken": "^8.5.1",
+    "pg": "^8.5.1"
   },
   "devDependencies": {
+    "@types/bcrypt": "^3.0.0",
     "@types/body-parser": "^1.19.0",
     "@types/circular-json": "^0.4.0",
     "@types/express": "^4.17.11",
+    "@types/express-validator": "^3.0.0",
+    "@types/jsonwebtoken": "^8.5.1",
     "@types/node": "^14.14.35",
+    "@types/pg": "^7.14.11",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
     "circular-json": "^0.5.9",
